# OS-project-1

./: CMakeLists.txt  MakeFile  Makefile  miris  test.txt
TestData-F24/: data100-4.txt  data100-8.txt  data1000-25.txt  data15-3.txt  edge.c  readme.txt
miris/: help.txt  helper.c  helper.h  main.c  prompt.c
miris/include/: graph.h  helper.h
miris/modules/: edge.c  graph.c  main.c  node.c  prompt.c
miris_src/include/: graph.h  helper.h
miris_src/modules/: edge.c  inNodes.c  main.c  node.c  prompt.c
miris_src/modules/graph/: edge.c  incomingNodes.c  node.c
